# trabalho-pratico-aeds

./: CMakeLists.txt  Dockerfile  compose.yml
docs/: cliente.md  estadia.md  funcionario.md  pessoa.md  quarto.md  utils.md
src/: cliente.cpp  cliente.hpp  clientes.cpp  clientes.hpp  estadia.cpp  estadia.hpp  funcionario.cpp  funcionario.hpp  global.cpp  global.hpp  handlers.cpp  handlers.hpp  main.catch2.cpp  main.cpp  pessoa.cpp  pessoa.hpp  quarto.cpp  quarto.hpp  utils.cpp  utils.hpp
src/handlers/: all.hpp  estadias.cpp  estadias.hpp  files.cpp  files.hpp  pessoas.cpp  pessoas.hpp  quartos.cpp  quartos.hpp
src/tests/: cliente.cpp  estadia.cpp  files.cpp  funcionario.cpp  handlers.hpp  main.cpp  pessoa.cpp  quarto.cpp  utils.cpp
tests/: cliente.cpp  estadia.cpp  files.cpp  funcionario.cpp  handlers.cpp  handlers.hpp  main.cpp  pessoa.cpp  quarto.cpp  utils.cpp
